--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ ul {
     padding-left: 0;
     margin: 0;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
  
 header {
     background-color: #fff;
@@ -47,18 +53,34 @@ header {
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .container {
-    width: 1158px;
-    padding: 0 15px;
+    max-width: 320px;
+    padding: 0 16px;
     margin: 0 auto;
 }
+
+@media screen and (min-width: 768px ) {
+    .container {
+    max-width: 768px;
+    
+    }
+    
+}
+
+@media screen and (min-width: 1158x) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+        margin: 0 auto;
+    }
+
+}
+
 .container-header {
     display: flex;
     align-items: center;
 }
 
-img {
-    display: block;
-}
+
 .navigation {
     list-style-type: none;
     text-align: center;
