--- a/css/style1.css
+++ b/css/style1.css
@@ -303,7 +303,7 @@
         background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url(../images/images2x-hero/background-tablet.jpg);
+            url(../images/background-image.jpg);
             padding: 188px 0;
         max-width: 1440px;
     }
@@ -465,6 +465,14 @@
     background: #f4f4fd;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .team-list .container {
+        max-width: 584px;
+    }
+
+}
+
+
 .team-title {
     background: #f4f4fd;
         font-weight: 700;
@@ -503,11 +511,13 @@
     gap: 0px;
     row-gap: 64px;
     justify-content: space-between;
+
     }
     .team-list-box {
         width: calc((100% - 24px) / 2);
     }
-    }
+}
+    
 
 @media screen and (min-width: 1158px) {
     .team-list-blocks {
