--- a/css/style1.css
+++ b/css/style1.css
@@ -54,6 +54,151 @@
      }
  }
 
+ /* mobile-menu  */
+
+ .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 999;
+
+    opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    
+}
+
+
+ .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+ }
+
+.mobile-menu-container {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.mobile-menu-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid #e7e9fc;
+    background-color: #ffffff;  
+    fill: #2e2f42;
+    position: absolute;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0;
+    cursor: pointer;
+}
+
+.mobile-menu-close:focus,
+.mobile-menu-close:hover {
+    border: none;
+    fill: #ffffff;
+    background-color: #404bbf;
+}
+
+.mobile-menu-nav {
+    margin-bottom: auto;
+}
+
+.navigation-mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding-left: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.link-navigation-mobile {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.link-navigation-mobile:hover,
+.link-navigation-mobile:focus {
+    color: #404bbf;
+}
+
+a.corrent {
+    color: #404bbf;
+}
+
+.address-mobile {
+    margin-bottom: 48px;
+}
+
+.contact-mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.link-contact-mobile {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.link-contact-mobile:hover,
+.link-contact-mobile:focus {
+    color: #4d5ae5;
+}
+
+.list-icon-mobile {
+    margin: 0;
+    display: flex;
+    gap: 40px;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.mobile-social {
+    display: flex;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+ @media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+    
+ }
+
  /* header */
 
  .display {
@@ -1021,6 +1166,305 @@
  .foter-icon-send {
      margin-left: 16px;
      fill: #fff;
+ }
+
+ .backdrop {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(46, 47, 66, 0.4);
+
+     opacity: 0;
+     visibility: hidden;
+     pointer-events: none;
+
+     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .backdrop.is-open {
+     opacity: 1;
+     visibility: visible;
+     pointer-events: auto;
+ }
+
+ .backdrop:not(.is-open) .modal {
+     transform: translate(-50%, -100%);
+ }
+
+ .modal {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     max-width: 288px;
+     min-height: 584px;
+     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+     background-color: #fcfcfc;
+     border-radius: 4px;
+     transform: translate(-50%, -50%);
+     padding: 72px 24px 24px 24px;
+     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ @media screen and (min-width: 768px)  {
+    .modal {
+            padding: 72px 24px 24px 24px;
+            max-width: 408px;
+    }
+    
+ }
+
+ .modal-text {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 150%;
+     letter-spacing: 0.02em;
+     text-align: center;
+     color: #2e2f42;
+     margin-bottom: 16px;
+ }
+
+ .btn-close {
+     display: flex;
+     width: 24px;
+     height: 24px;
+     padding: 0;
+     cursor: pointer;
+     border-radius: 50%;
+     background-color: #e7e9fc;
+     fill: #2e2f42;
+     justify-content: center;
+     align-items: center;
+     border: 1px solid rgba(0, 0, 0, 0.1);
+     position: absolute;
+     top: 24px;
+     right: 24px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .btn-close:hover,
+ .btn-close:focus {
+     background-color: #404bbf;
+     fill: #ffffff;
+     border: none;
+ }
+
+ .icon-close {
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     padding: 0;
+ }
+
+ .form-group {
+     margin-bottom: 8px;
+     border: none;
+
+ }
+
+ .form-user-icon-wrapper {
+     position: relative;
+
+ }
+
+ .form {
+     display: flex;
+     min-width: 256px;
+     flex-direction: column;
+ }
+ 
+@media screen and (min-width: 768px) {
+    .form {
+        min-width: 360px;
+    }
+}
+
+ .form-wrraper-cont {
+     border: none;
+     margin-bottom: 8px;
+
+
+ }
+
+ .form-label {
+     display: block;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: #8e8f99;
+     cursor: pointer;
+     margin-bottom: 4px;
+ }
+
+ .form-label {
+     position: relative;
+ }
+
+ .form-user-input {
+     border: 1px solid rgba(46, 47, 66, 0.4);
+     border-radius: 4px;
+     background-color: transparent;
+     width: 100%;
+     height: 40px;
+     outline: transparent;
+     padding-left: 38px;
+     font-family: "Roboto", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: rgba(46, 47, 66, 0.4);
+     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .form-user-input:focus+.form-user-icon {
+     fill: #4d5ae5;
+ }
+
+ .form-user-icon {
+     position: absolute;
+     left: 16px;
+     top: 50%;
+     transform: translateY(-50%);
+     fill: #2e2f42;
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .form-user-input:focus-within {
+     border: 1px solid #4d5ae5;
+ }
+
+ .comment {
+     margin-bottom: 16px;
+     border: none;
+ }
+
+ .form-comment {
+     margin-bottom: 16px;
+     border: none;
+ }
+
+ .form-user {
+     display: block;
+     cursor: pointer;
+     margin-bottom: 4px;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: #8e8f99;
+ }
+
+ .text-input {
+     display: block;
+     border-radius: 4px;
+     width: 360px;
+     height: 120px;
+     resize: none;
+     padding: 8px 16px;
+     outline: transparent;
+     font-family: "Roboto", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: rgba(46, 47, 66, 0.4);
+     background-color: transparent;
+     border: 1px solid rgba(46, 47, 66, 0.4);
+     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .text-input:focus {
+     border: 1px solid #4d5ae5;
+     border-radius: 4px;
+ }
+
+ .text-input::placeholder {
+     font-family: "Roboto", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: rgba(46, 47, 66, 0.4);
+ }
+
+ .field-checkbox {
+     margin-bottom: 24px;
+ }
+
+ .checkbox-input {
+     cursor: pointer;
+ }
+
+ .form-checkbox-label {
+     gap: 4px;
+     font-family: "Roboto", sans-serif;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 117%;
+     letter-spacing: 0.04em;
+     color: #8e8f99;
+ }
+
+ .check {
+     width: 16px;
+     height: 16px;
+     border-radius: 2px;
+     border: 1px solid rgba(46, 47, 66, 0.4);
+     display: inline-flex;
+     justify-content: center;
+     align-items: center;
+     fill: transparent;
+     background-color: transparent;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     margin-right: 8px;
+ }
+
+ .checkbox-input:checked+.form-checkbox-label>.check {
+     background-color: #404bbf;
+     border: none;
+     fill: #f4f4fd;
+ }
+
+ .checkbox-input:focus+.form-checkbox-label>.check {
+     border: #404bbf;
+ }
+
+ .subsribe-box {
+     margin-left: 80px;
+ }
+
+ .checkbox-link {
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 133%;
+     text-decoration: underline;
+     text-decoration-skip-ink: none;
+     color: #4d5ae5;
+ }
+
+ .button-modal {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 150%;
+     color: #fff;
+     text-align: center;
+     background-color: #4d5ae5;
+     letter-spacing: 0.04em;
+     cursor: pointer;
+     border: none;
+     border-radius: 4px;
+     min-width: 169px;
+     height: 56px;
+     padding: 16px 32px;
+     margin: auto;
+     display: block;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 
