--- a/css/style1.css
+++ b/css/style1.css
@@ -435,7 +435,7 @@ a.corrent {
          background-image: linear-gradient(to bottom,
                  rgba(46, 47, 66, 0.7),
                  rgba(46, 47, 66, 0.7)),
-             url(../images/images2x-hero/background-tablet.jpg);
+             url(../images/images2x-hero/background-tablet@1x.jpg);
          padding: 112px 0;
          max-width: 768px;
      }
@@ -748,7 +748,7 @@ a.corrent {
      height: 40px;
  }
 
- /* не завершена 3 секція */
+ 
 
 
 /* portfolio */
@@ -761,6 +761,9 @@ a.corrent {
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
     .team-list .container {
+        max-width: 584px;
+    }
+    .footer .container {
         max-width: 584px;
     }
 
@@ -949,9 +952,7 @@ a.corrent {
      row-gap: 72px;
  }
 
- @media screen and (min-width: 768px) {
-    
- }
+ 
 
  @media screen and (min-width: 1158px) {
     .container-footer {
