--- a/css/style1.css
+++ b/css/style1.css
@@ -808,7 +808,6 @@ a.corrent {
         flex-wrap: wrap;
         gap: 24px;
         margin: 0 auto;
-        padding-left: 0;
         row-gap: 72px;
         }
     
@@ -1207,7 +1206,7 @@ a.corrent {
      position: absolute;
      top: 50%;
      left: 50%;
-     max-width: 288px;
+     width: 288px;
      min-height: 584px;
      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
      background-color: #fcfcfc;
@@ -1221,7 +1220,7 @@ a.corrent {
  @media screen and (min-width: 768px)  {
     .modal {
             padding: 72px 24px 24px 24px;
-            max-width: 408px;
+            width: 408px;
     }
     
  }
@@ -1279,8 +1278,6 @@ a.corrent {
  }
 
  .form {
-     display: flex;
-     min-width: 256px;
      flex-direction: column;
  }
  
@@ -1370,7 +1367,7 @@ a.corrent {
  .text-input {
      display: block;
      border-radius: 4px;
-     width: 360px;
+     width: 100%;
      height: 120px;
      resize: none;
      padding: 8px 16px;
